syntax = "proto3";

package api.review.v1;

import "google/api/annotations.proto";
import  "validate/validate.proto";
option go_package = "review-service/api/review/v1;v1";
option java_multiple_files = true;
option java_package = "api.review.v1";
//定义评价服务
service Review {
	//创建评价
	rpc CreateReview (CreateReviewRequest) returns (CreateReviewReply){
		option (google.api.http) = {
			post: "/v1/review"
			body: "*"
		};
	};
	//B段回复评价
	rpc ReplyReview(ReplyReviewRequest)returns (ReplyReviewReply){
		option(google.api.http)={
			post:"v1/review/appeal",
			body:"*"
		};
	};
	rpc UpdateReview (UpdateReviewRequest) returns (UpdateReviewReply);
	rpc DeleteReview (DeleteReviewRequest) returns (DeleteReviewReply);
	rpc GetReview (GetReviewRequest) returns (GetReviewReply);
	rpc ListReview (ListReviewRequest) returns (ListReviewReply);
	//B段回复评价

}

//创建评价的参数
message CreateReviewRequest {
	int64 userID=1[(validate.rules).int64={gt: 0}]; //用户ID
	int64 orderID=2[(validate.rules).int64={gt: 0}]; //订单ID
	int32 score=3[(validate.rules).int32={gte: 1, lte: 5}]; //商品评分
	int32 serviceScore=4[(validate.rules).int32={gte: 1, lte: 5}]; //服务评分
	int32 expressScore=5[(validate.rules).int32={gte: 1, lte: 5}]; //物流评分
    string content=6[(validate.rules).string={min_len: 8, max_len: 500}]; //评价内容
	 string picInfo=7; //评价图片
	 string videoInfo=8; //评价视频
	 bool anonymous=9; //是否匿名评价
}
//创建评价的回复
message CreateReviewReply {
	int64 reviewID=1; //评价ID
}

message UpdateReviewRequest {}
message UpdateReviewReply {}

message DeleteReviewRequest {}
message DeleteReviewReply {}

message GetReviewRequest {}
message GetReviewReply {}

message ListReviewRequest {}
message ListReviewReply {}
//商家回复
message ReplyReviewRequest{
	int64 reviewID = 1 [(validate.rules).int64 = {gt: 0}];
	int64 storeID = 2 [(validate.rules).int64 = {gt: 0}];
	string content = 3 [(validate.rules).string = {min_len: 2, max_len:200}];
	string picInfo = 4;
	string videoInfo = 5;
}
//商家回复返回值
message ReplyReviewReply{
	int64 replyID = 1; //回复id
}
